add docker endpoints for images actions
