# internal/domain/docker/image_detele_model.go
@@ -1,0 +1,8 @@
+package docker
+
+// ImageDeleteResponse represents the response from a Docker image deletion
+type ImageDeleteResponse struct {
+	Deleted  []string `json:"deleted,omitempty"`  // List of deleted image layers
+	Untagged []string `json:"untagged,omitempty"` // List of untagged images
+	Errors   []string `json:"errors,omitempty"`   // List of errors encountered during deletion
+}
